# XBraidPoroForUG4

./: CMakeLists.txt  README.md
doc/: cesari-gcc  todos
libs/braid/braid/: braid.h  braid.hpp
libs/braid/docs/: developer_manual.conf  user_manual.conf
libs/braid/examples/: braid.out.cycle  ex-01-adjoint  ex-01-expanded  ex-01-expanded-bdf2  ex-01-optimization  ex-01-pp  ex-01-refinement  ex-01.c  ex-01.out.0002.000  ex-01.out.0003.001  ex-01.out.0017.001  ex-01.out.0018.001  ex-01.out.0020.001  ex-01.out.0023.001  ex-01.out.0024.001  ex-01.out.0025.001  ex-01.out.0026.001  ex-01.out.0027.001  ex-01.out.0028.001  ex-01.out.0029.001  ex-01.out.0030.001  ex-01.out.0031.001  ex-01.out.0032.001  ex-01.out.0033.001  ex-01.out.0034.002  ex-01.out.0035.002  ex-01.out.0036.002  ex-01.out.0037.002  ex-01.out.0038.002  ex-01.out.0039.002  ex-01.out.0040.002  ex-01.out.0041.002  ex-01.out.0042.002  ex-01.out.0043.002  ex-01.out.0044.002  ex-01.out.0045.002  ex-01.out.0046.002  ex-01.out.0047.002  ex-01.out.0048.002  ex-01.out.0049.002  (+55 more)
libs/braid/examples/ex01/: braid.out.cycle  ex-01  ex-01.out.idx_0000.lvl_000.it_005.rnk000  ex-01.out.idx_0001.lvl_000.it_005.rnk000  ex-01.out.idx_0002.lvl_000.it_000.rnk000  ex-01.out.idx_0003.lvl_000.it_000.rnk000  ex-01.out.idx_0004.lvl_000.it_002.rnk000  ex-01.out.idx_0005.lvl_000.it_000.rnk000  ex-01.out.idx_0005.lvl_000.it_002.rnk000  ex-01.out.idx_0006.lvl_000.it_000.rnk000  ex-01.out.idx_0006.lvl_000.it_001.rnk000  ex-01.out.idx_0006.lvl_000.it_005.rnk000  ex-01.out.idx_0007.lvl_000.it_000.rnk000  ex-01.out.idx_0007.lvl_000.it_001.rnk000  ex-01.out.idx_0007.lvl_000.it_003.rnk000  ex-01.out.idx_0008.lvl_000.it_000.rnk000  ex-01.out.idx_0008.lvl_000.it_001.rnk000  ex-01.out.idx_0008.lvl_000.it_002.rnk000  ex-01.out.idx_0009.lvl_000.it_000.rnk000  (+606 more)
libs/xbraid_2019/braid/: _braid_base.c  braid.h  braid_defs.h
libs/xbraid_2019/docs/: developer_manual.conf
libs/xbraid_2019/examples/: ex-03-lib.c
libs/xbraid_old/: makefile.inc
libs/xbraid_old/braid/: braid.hpp
libs/xbraid_old/docs/: user_manual.conf
libs/xbraid_old/examples/: ex-02.c  ex-03.c
src/: PBraidApp.h  xbraidforug4_plugin.cpp
src/biot/: BiotScriptor.h
src/control/: BraidConv.h
src/core/: BraidExecutor.h  BraidVectorStruct.h  SpaceTimeCommunicator.h
src/driver/: BraidGridFunctionBase.h  BraidIntegrator.h  BraidIntegratorFactory.h  BraidTimeStepper.h  DummyDistributionBraidApp.h
src/initializer/: start_value_initializer.h  zero_Initializer.h
src/integrator/: CachedThetaIntegrator.h  CachedThetaIntegratorFactory.h  ThetaIntegrator.h  ThetaIntegratorFactory.h
src/interface/: generator.h  initializer.h  integrator_factory.h  scriptor.h  spatial_norm.h
src/spatial_norm/: euclidian_norm.h  norm_ibanachspace.h
src/util/: BraidTimer.h  BraidUsageTimer.h  MemoryObserver.h  Scriptor.h  paralog.cpp  paralog.h  status.cpp  status.h
